--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,21 +1,74 @@
 body {
-	font-family: "Yu Gothic Medium", "游ゴシック Medium", YuGothic, "游ゴシック体",
-		sans-serif;
+    font-family: "Yu Gothic Medium", "游ゴシック Medium", YuGothic,
+        "游ゴシック体", sans-serif;
+    display: flex;
+    justify-content: center;
 }
 
-#main {
-	display: grid;
-	grid-template-columns: repeat(10, 20px);
-	border-width: 1px;
-	border-style: sodid;
+#app {
+    border: 1px solid;
+    border-radius: 5px;
+}
+.conteiner {
+    display: flex;
+}
+
+.flex-box {
+    flex: 2;
+    display: flex;
+    justify-content: center;
+}
+
+#reset-button {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    width: 20px;
+    height: 20px;
+    margin: auto;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: center;
+}
+#time {
+    width: 100%;
+}
+#bomb {
+    width: 100%;
+    text-align: right;
+}
+
+#game {
+    margin: 0px 5px 5px 5px;
+    display: grid;
+    grid-template-columns: repeat(10, 20px);
+    border-width: 1px;
+    border-style: solid;
+    border-color: gray;
 }
 
 .cell {
-	width: 20px;
-	height: 20px;
-	border-style: outset;
-	border-width: 2px;
-	border-color: lightgray;
-	box-sizing: border-box;
-	background-color: lightgray;
+    width: 20px;
+    height: 20px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: gray;
+    box-sizing: border-box;
+    background-color: lightgreen;
+    line-height: 20px;
+    text-align: center;
+}
+
+.open {
+    background-color: #e5b670;
+    border-color: #976434;
+}
+
+.bomb {
+    background-color: tomato;
+}
+
+.miss {
+    background-color: lightpink;
+    color: red;
 }
